--- a/main.ipynb
+++ b/main.ipynb
@@ -18,11 +18,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data Wrangling\n",
+    "\n",
+    "https://www.cbp.gov/newsroom/stats\n",
+    "\n",
+    "https://www.ice.gov/detain/detention-management\n",
+    "\n",
+    "https://www.uscis.gov/tools/reports-and-studies/immigration-and-citizenship-data\n",
+    "\n",
+    "https://ohss.dhs.gov/topics/immigration#other-resources \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ideas\n",
+    "- Write about H1B, H2A, H2B, or other visas\n",
+    "- Write about detained individual counts at the border\n",
+    "- Write about detained individuals within the US\n",
+    "- Forecast immigration data\n",
+    "- Forecast impacts of policy changes"
+   ]
   }
  ],
  "metadata": {
