Appended and read visa data

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,13 @@
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "from yfinance import ticker\n",
-    "import json"
+    "import json\n",
+    "from io import StringIO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1832,7 @@
        " ...}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,11 +1843,162 @@
     "\n",
     "with open('data/company_tickers.json', 'r') as f:\n",
     "    data = json.load(f)\n",
-    "\n",
-    "\n",
     "data\n",
     "#companies = [entry[\"ticker\"] for entry in response.values()]\n",
     "#print(companies[:10])  # Print first 10 tickers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_16724\\1127021294.py:13: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_16724\\1127021294.py:13: DtypeWarning: Columns (9,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_16724\\1127021294.py:13: DtypeWarning: Columns (4,16,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_16724\\1127021294.py:13: DtypeWarning: Columns (16,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "h1b_2009_path = 'data/h1b_2016_2009.csv'\n",
+    "h1b_2017_path = 'data/h1b_2024_2017.csv'\n",
+    "\n",
+    "h2a_2015_path = 'data/h2a_2019_2015.csv'\n",
+    "h2a_2020_path = 'data/h2a_2024_2020.csv'\n",
+    "\n",
+    "h2b_2015_path = 'data/h2b_2019_2015.csv'\n",
+    "h2b_2020_path = 'data/h2b_2025_2020.csv'\n",
+    "\n",
+    "#Had to convert all encoding to UTF8 via notepad++\n",
+    "def read_tsv(file_path):\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
+    "\n",
+    "# Read all files using the function\n",
+    "df_h1b_a = read_tsv(h1b_2009_path)\n",
+    "df_h1b_b = read_tsv(h1b_2017_path)\n",
+    "\n",
+    "df_h2a_a = read_tsv(h2a_2015_path)\n",
+    "df_h2a_b = read_tsv(h2a_2020_path)\n",
+    "\n",
+    "df_h2b_a = read_tsv(h2b_2015_path)\n",
+    "df_h2b_b = read_tsv(h2b_2020_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_h1b = pd.concat([df_h1b_a, df_h1b_b], axis=0)\n",
+    "\n",
+    "df_h2a = pd.concat([df_h2a_a, df_h2a_b], axis=0)\n",
+    "\n",
+    "df_h2b = pd.concat([df_h2b_a, df_h2b_b], axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                              NaN\n",
+       "1                              NaN\n",
+       "2                              NaN\n",
+       "3                              NaN\n",
+       "4                              NaN\n",
+       "                    ...           \n",
+       "293612                   ZYWIE INC\n",
+       "293613    ZYXEL COMMUNICATIONS INC\n",
+       "293614                   ZYZYX INC\n",
+       "293615           ZZOUNDS MUSIC LLC\n",
+       "293616                    ZZZS INC\n",
+       "Name: Employer (Petitioner) Name, Length: 781287, dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_h1b['Employer (Petitioner) Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                  2J DONNELL LIVESTOCK LLC\n",
+       "1                        2J HONEY FARMS LLC\n",
+       "2                     2L CATTLE COMPANY LLC\n",
+       "3                                 3 B FARMS\n",
+       "4                                 3 D FARMS\n",
+       "                        ...                \n",
+       "79554                      ZION HARVEST INC\n",
+       "79555    ZITO FARMS LLC AND KEN PATTERSON F\n",
+       "79556                       ZUBKE FARMS LLC\n",
+       "79557                       ZUBKE FARMS LLC\n",
+       "79558                     ZWEIFEL FARMS INC\n",
+       "Name: Employer (Petitioner) Name, Length: 118257, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_h2a['Employer (Petitioner) Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                           560 BABYLON LLC\n",
+       "1               A & C FORESTRY SERVICES LLC\n",
+       "2                       A & I INTERIORS LLC\n",
+       "3                        A FERRIS ALLEN III\n",
+       "4                        A G ROOFING CO INC\n",
+       "                        ...                \n",
+       "52258    YELLOWSTONE LANDSCAPE SOUTHEAST LL\n",
+       "52259    YELLOWSTONE LANDSCAPE SOUTHEAST LL\n",
+       "52260    YONDER FARMS FRUIT DISTRIBUTORS LL\n",
+       "52261                YORK RIVER LANDSCAPING\n",
+       "52262                  YOUNGS LOBSTER POUND\n",
+       "Name: Employer (Petitioner) Name, Length: 78592, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_h2b['Employer (Petitioner) Name']"
    ]
   },
   {
