--- a/main.ipynb
+++ b/main.ipynb
@@ -476,11 +476,41 @@
    "source": [
     "df_visas_clean.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def fetch_stock_data(tickers):\n",
+    "    all_data = {}\n",
+    "    print('Downloading yfinance historical price data 2000/01/01 to 2025/03/16')\n",
+    "    num_downloaded = 0\n",
+    "    for ticker in tickers:\n",
+    "        try:\n",
+    "            data = yf.download(ticker, start=\"2000-01-01\", end=\"2025-03-16\", progress = False)\n",
+    "            all_data[ticker] = data\n",
+    "            num_downloaded +=1\n",
+    "            time.sleep(2.2)  # Sleep for 2 seconds between requests to avoid being blocked\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error downloading {ticker}: {e}\")\n",
+    "            time.sleep(2.2)\n",
+    "\n",
+    "    print('Successfully downloaded ' + str(num_downloaded/len(tickers)))\n",
+    "    #Save a csv for offline work\n",
+    "    sp500_data = pd.concat(all_data, axis=1)\n",
+    "    sp500_data.to_csv(\"sp500_data.csv\")\n",
+    "    \n",
+    "    print(\"S&P 500 historical data saved to sp500_data.csv\")\n",
+    "    return sp500_data\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ570",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
