--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,20 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_20376\\3014528854.py:13: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3014528854.py:13: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_20376\\3014528854.py:13: DtypeWarning: Columns (9,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3014528854.py:13: DtypeWarning: Columns (9,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_20376\\3014528854.py:13: DtypeWarning: Columns (4,16,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3014528854.py:13: DtypeWarning: Columns (4,16,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n",
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_20376\\3014528854.py:13: DtypeWarning: Columns (16,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3014528854.py:13: DtypeWarning: Columns (16,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  return pd.read_csv(StringIO(f.read()), delimiter=\"\\t\")\n"
      ]
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,19 +301,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_23664\\3144496779.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3144496779.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_h1b_listed['type'] = 'h1b'\n",
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_23664\\3144496779.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3144496779.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_h2a_listed['type'] = 'h2a'\n",
-      "C:\\Users\\peter\\AppData\\Local\\Temp\\ipykernel_23664\\3144496779.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\owenh\\AppData\\Local\\Temp\\ipykernel_12284\\3144496779.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -458,19 +458,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_visas_clean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_visas_clean\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_visas_clean' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fiscal Year</th>\n",
+       "      <th>Industry (NAICS) Code</th>\n",
+       "      <th>Petitioner City</th>\n",
+       "      <th>Petitioner State</th>\n",
+       "      <th>Petitioner Zip Code</th>\n",
+       "      <th>Initial Approval</th>\n",
+       "      <th>Continuing Approval</th>\n",
+       "      <th>employer</th>\n",
+       "      <th>type</th>\n",
+       "      <th>Action Fiscal Year</th>\n",
+       "      <th>...</th>\n",
+       "      <th>New Employment Approval</th>\n",
+       "      <th>Continuation Approval</th>\n",
+       "      <th>Change with Same Employer Approval</th>\n",
+       "      <th>New Concurrent Approval</th>\n",
+       "      <th>Change of Employer Approval</th>\n",
+       "      <th>Amended Approval</th>\n",
+       "      <th>Cap Fiscal Year</th>\n",
+       "      <th>Cap Type</th>\n",
+       "      <th>Work Site State</th>\n",
+       "      <th>Hourly Wage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NORTH CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60064.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ABBOTT LABORATORIES</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>31-33 - Manufacturing</td>\n",
+       "      <td>ABBOT PARK</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60064.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ABBOTT LABORATORIES</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>31-33 - Manufacturing</td>\n",
+       "      <td>ABBOTT PARK</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60064.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>41</td>\n",
+       "      <td>ABBOTT LABORATORIES</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>550</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>31-33 - Manufacturing</td>\n",
+       "      <td>NORTH CHICAGO</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>60064.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ABBOTT LABORATORIES</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>694</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>54 - Professional, Scientific, and Technical S...</td>\n",
+       "      <td>SAN DIEGO</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>92130.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ACADIA PHARMACEUTICALS INC</td>\n",
+       "      <td>h1b</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Fiscal Year                                 Industry (NAICS) Code  \\\n",
+       "547          2016.0                                                NaN   \n",
+       "548          2016.0                              31-33 - Manufacturing   \n",
+       "549          2016.0                              31-33 - Manufacturing   \n",
+       "550          2016.0                              31-33 - Manufacturing   \n",
+       "694          2016.0  54 - Professional, Scientific, and Technical S...   \n",
+       "\n",
+       "    Petitioner City Petitioner State  Petitioner Zip Code Initial Approval  \\\n",
+       "547   NORTH CHICAGO               IL              60064.0                1   \n",
+       "548      ABBOT PARK               IL              60064.0                0   \n",
+       "549     ABBOTT PARK               IL              60064.0                2   \n",
+       "550   NORTH CHICAGO               IL              60064.0                0   \n",
+       "694       SAN DIEGO               CA              92130.0                1   \n",
+       "\n",
+       "    Continuing Approval                    employer type  Action Fiscal Year  \\\n",
+       "547                   1         ABBOTT LABORATORIES  h1b                 NaN   \n",
+       "548                   1         ABBOTT LABORATORIES  h1b                 NaN   \n",
+       "549                  41         ABBOTT LABORATORIES  h1b                 NaN   \n",
+       "550                   5         ABBOTT LABORATORIES  h1b                 NaN   \n",
+       "694                   1  ACADIA PHARMACEUTICALS INC  h1b                 NaN   \n",
+       "\n",
+       "     ... New Employment Approval Continuation Approval  \\\n",
+       "547  ...                     NaN                   NaN   \n",
+       "548  ...                     NaN                   NaN   \n",
+       "549  ...                     NaN                   NaN   \n",
+       "550  ...                     NaN                   NaN   \n",
+       "694  ...                     NaN                   NaN   \n",
+       "\n",
+       "    Change with Same Employer Approval New Concurrent Approval  \\\n",
+       "547                                NaN                     NaN   \n",
+       "548                                NaN                     NaN   \n",
+       "549                                NaN                     NaN   \n",
+       "550                                NaN                     NaN   \n",
+       "694                                NaN                     NaN   \n",
+       "\n",
+       "    Change of Employer Approval Amended Approval Cap Fiscal Year Cap Type  \\\n",
+       "547                         NaN              NaN             NaN      NaN   \n",
+       "548                         NaN              NaN             NaN      NaN   \n",
+       "549                         NaN              NaN             NaN      NaN   \n",
+       "550                         NaN              NaN             NaN      NaN   \n",
+       "694                         NaN              NaN             NaN      NaN   \n",
+       "\n",
+       "    Work Site State  Hourly Wage  \n",
+       "547             NaN          NaN  \n",
+       "548             NaN          NaN  \n",
+       "549             NaN          NaN  \n",
+       "550             NaN          NaN  \n",
+       "694             NaN          NaN  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -479,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +720,12 @@
     "    sp500_data.to_csv(\"sp500_data.csv\")\n",
     "    \n",
     "    print(\"S&P 500 historical data saved to sp500_data.csv\")\n",
-    "    return sp500_data\n"
+    "    return sp500_data\n",
+    "\n",
+    "#Only run this once on your system\n",
+    "#Make sure NOT to track the sp500_data csv\n",
+    "#sp500csv made for offline work\n",
+    "#fetch_stock_data"
    ]
   }
  ],
