--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "\n",
     "# company_mapping = {remove_meta_characters(company['title']): company['ticker'] for company in data.values()}\n",
     "\n",
-    "# visa_files = {\"h1b\": ['data/visas/h1b_2016_2009.csv', 'data/visas/h1b_2024_2017.csv']}\n",
+    "# visa_files = {\"h1b\": ['data/visas/h1b_2016_2009.csv', 'data/visas/h1b_2019_2017.csv', 'data/visas/h1b_2024_2020.csv']}\n",
     "\n",
     "# df_visas = []\n",
     "# for visa_type, files in visa_files.items():\n",
@@ -167,13 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "h1b_2009_path = 'data/visas/h1b_2016_2009.csv'\n",
-    "h1b_2017_path = 'data/visas/h1b_2024_2017.csv'\n",
+    "h1b_2017_path = 'data/visas/h1b_2019_2017.csv'\n",
+    "h1b_2020_path = 'data/visas/h1b_2024_2020.csv'\n",
     "\n",
     "h2a_2015_path = 'data/visas/h2a_2019_2015.csv'\n",
     "h2a_2020_path = 'data/visas/h2a_2024_2020.csv'\n",
@@ -189,6 +190,7 @@
     "# Read all files using the function\n",
     "df_h1b_a = read_tsv(h1b_2009_path)\n",
     "df_h1b_b = read_tsv(h1b_2017_path)\n",
+    "df_h1b_c = read_tsv(h1b_2020_path)\n",
     "\n",
     "df_h2a_a = read_tsv(h2a_2015_path)\n",
     "df_h2a_b = read_tsv(h2a_2020_path)\n",
@@ -199,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_h1b = pd.concat([df_h1b_a, df_h1b_b], axis=0)\n",
+    "df_h1b = pd.concat([df_h1b_a, df_h1b_b, df_h1b_c], axis=0)\n",
     "\n",
     "df_h2a = pd.concat([df_h2a_a, df_h2a_b], axis=0)\n",
     "\n",
