Fixed df headers

--- a/main.ipynb
+++ b/main.ipynb
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1629,54 +1629,30 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
+       "      <th>address1</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>country</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>fax</th>\n",
+       "      <th>website</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>industryKey</th>\n",
        "      <th>...</th>\n",
-       "      <th>197</th>\n",
-       "      <th>198</th>\n",
-       "      <th>199</th>\n",
-       "      <th>200</th>\n",
-       "      <th>201</th>\n",
-       "      <th>202</th>\n",
-       "      <th>203</th>\n",
-       "      <th>204</th>\n",
-       "      <th>205</th>\n",
-       "      <th>206</th>\n",
+       "      <th>trailingThreeMonthNavReturns</th>\n",
+       "      <th>netAssets</th>\n",
+       "      <th>netExpenseRatio</th>\n",
+       "      <th>newListingDate</th>\n",
+       "      <th>address3</th>\n",
+       "      <th>morningStarOverallRating</th>\n",
+       "      <th>morningStarRiskRating</th>\n",
+       "      <th>annualReportExpenseRatio</th>\n",
+       "      <th>lastCapGain</th>\n",
+       "      <th>annualHoldingsTurnover</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <td>address1</td>\n",
-       "      <td>city</td>\n",
-       "      <td>state</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>country</td>\n",
-       "      <td>phone</td>\n",
-       "      <td>fax</td>\n",
-       "      <td>website</td>\n",
-       "      <td>industry</td>\n",
-       "      <td>industryKey</td>\n",
-       "      <td>...</td>\n",
-       "      <td>trailingThreeMonthNavReturns</td>\n",
-       "      <td>netAssets</td>\n",
-       "      <td>netExpenseRatio</td>\n",
-       "      <td>newListingDate</td>\n",
-       "      <td>address3</td>\n",
-       "      <td>morningStarOverallRating</td>\n",
-       "      <td>morningStarRiskRating</td>\n",
-       "      <td>annualReportExpenseRatio</td>\n",
-       "      <td>lastCapGain</td>\n",
-       "      <td>annualHoldingsTurnover</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
        "      <td>5301 Stevens Creek Boulevard</td>\n",
@@ -1774,137 +1750,17 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SEE</th>\n",
-       "      <td>2415 Cascade Pointe Boulevard</td>\n",
-       "      <td>Charlotte</td>\n",
+       "      <th>AAP</th>\n",
+       "      <td>4200 Six Forks Road</td>\n",
+       "      <td>Raleigh</td>\n",
        "      <td>NC</td>\n",
-       "      <td>28208</td>\n",
+       "      <td>27609</td>\n",
        "      <td>United States</td>\n",
-       "      <td>980 221 3235</td>\n",
+       "      <td>540 362 4911</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://www.sealedair.com</td>\n",
-       "      <td>Packaging &amp; Containers</td>\n",
-       "      <td>packaging-containers</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TELNF</th>\n",
-       "      <td>Snarøyveien 30</td>\n",
-       "      <td>Fornebu</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1360</td>\n",
-       "      <td>Norway</td>\n",
-       "      <td>47 81 07 70 00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.telenor.com</td>\n",
-       "      <td>Telecom Services</td>\n",
-       "      <td>telecom-services</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VEVMQ</th>\n",
-       "      <td>3168, 262nd Street</td>\n",
-       "      <td>Aldergrove</td>\n",
-       "      <td>BC</td>\n",
-       "      <td>V4W 2Z6</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>(604) 607-4000</td>\n",
-       "      <td>(604) 607-4004</td>\n",
-       "      <td>https://vicinitymotorcorp.com</td>\n",
-       "      <td>Auto Manufacturers</td>\n",
-       "      <td>auto-manufacturers</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VICI</th>\n",
-       "      <td>535 Madison Avenue</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>10022-2203</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>646 949 4631</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.viciproperties.com</td>\n",
-       "      <td>REIT - Diversified</td>\n",
-       "      <td>reit-diversified</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZVRA</th>\n",
-       "      <td>1180 Celebration Boulevard</td>\n",
-       "      <td>Celebration</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>34747</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>321 939 3416</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://zevra.com</td>\n",
-       "      <td>Biotechnology</td>\n",
-       "      <td>biotechnology</td>\n",
+       "      <td>https://shop.advanceautoparts.com</td>\n",
+       "      <td>Auto Parts</td>\n",
+       "      <td>auto-parts</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1919,111 +1775,64 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2347 rows × 207 columns</p>\n",
+       "<p>5 rows × 207 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      0            1      2           3    \\\n",
-       "Unnamed: 0                       address1         city  state         zip   \n",
-       "A            5301 Stevens Creek Boulevard  Santa Clara     CA       95051   \n",
-       "AAME            4370 Peachtree Road, N.E.      Atlanta     GA       30319   \n",
-       "AAOI          13139 Jess Pirtle Boulevard   Sugar Land     TX       77478   \n",
-       "AAON              2425 South Yukon Avenue        Tulsa     OK       74107   \n",
-       "...                                   ...          ...    ...         ...   \n",
-       "SEE         2415 Cascade Pointe Boulevard    Charlotte     NC       28208   \n",
-       "TELNF                      Snarøyveien 30      Fornebu    NaN        1360   \n",
-       "VEVMQ                  3168, 262nd Street   Aldergrove     BC     V4W 2Z6   \n",
-       "VICI                   535 Madison Avenue     New York     NY  10022-2203   \n",
-       "ZVRA           1180 Celebration Boulevard  Celebration     FL       34747   \n",
+       "                          address1         city state    zip        country  \\\n",
+       "A     5301 Stevens Creek Boulevard  Santa Clara    CA  95051  United States   \n",
+       "AAME     4370 Peachtree Road, N.E.      Atlanta    GA  30319  United States   \n",
+       "AAOI   13139 Jess Pirtle Boulevard   Sugar Land    TX  77478  United States   \n",
+       "AAON       2425 South Yukon Avenue        Tulsa    OK  74107  United States   \n",
+       "AAP            4200 Six Forks Road      Raleigh    NC  27609  United States   \n",
        "\n",
-       "                      4               5               6    \\\n",
-       "Unnamed: 0        country           phone             fax   \n",
-       "A           United States    800 227 9770    866 497 1134   \n",
-       "AAME        United States    404 266 5500             NaN   \n",
-       "AAOI        United States  (281) 295-1800             NaN   \n",
-       "AAON        United States    918 583 2266    918 583 6094   \n",
-       "...                   ...             ...             ...   \n",
-       "SEE         United States    980 221 3235             NaN   \n",
-       "TELNF              Norway  47 81 07 70 00             NaN   \n",
-       "VEVMQ              Canada  (604) 607-4000  (604) 607-4004   \n",
-       "VICI        United States    646 949 4631             NaN   \n",
-       "ZVRA        United States    321 939 3416             NaN   \n",
+       "               phone           fax                            website  \\\n",
+       "A       800 227 9770  866 497 1134            https://www.agilent.com   \n",
+       "AAME    404 266 5500           NaN              https://www.atlam.com   \n",
+       "AAOI  (281) 295-1800           NaN             https://www.ao-inc.com   \n",
+       "AAON    918 583 2266  918 583 6094               https://www.aaon.com   \n",
+       "AAP     540 362 4911           NaN  https://shop.advanceautoparts.com   \n",
        "\n",
-       "                                       7                              8    \\\n",
-       "Unnamed: 0                         website                       industry   \n",
-       "A                  https://www.agilent.com         Diagnostics & Research   \n",
-       "AAME                 https://www.atlam.com               Insurance - Life   \n",
-       "AAOI                https://www.ao-inc.com        Communication Equipment   \n",
-       "AAON                  https://www.aaon.com  Building Products & Equipment   \n",
-       "...                                    ...                            ...   \n",
-       "SEE              https://www.sealedair.com         Packaging & Containers   \n",
-       "TELNF              https://www.telenor.com               Telecom Services   \n",
-       "VEVMQ        https://vicinitymotorcorp.com             Auto Manufacturers   \n",
-       "VICI        https://www.viciproperties.com             REIT - Diversified   \n",
-       "ZVRA                     https://zevra.com                  Biotechnology   \n",
+       "                           industry                  industryKey  ...  \\\n",
+       "A            Diagnostics & Research         diagnostics-research  ...   \n",
+       "AAME               Insurance - Life               insurance-life  ...   \n",
+       "AAOI        Communication Equipment      communication-equipment  ...   \n",
+       "AAON  Building Products & Equipment  building-products-equipment  ...   \n",
+       "AAP                      Auto Parts                   auto-parts  ...   \n",
        "\n",
-       "                                    9    ...                           197  \\\n",
-       "Unnamed: 0                  industryKey  ...  trailingThreeMonthNavReturns   \n",
-       "A                  diagnostics-research  ...                           NaN   \n",
-       "AAME                     insurance-life  ...                           NaN   \n",
-       "AAOI            communication-equipment  ...                           NaN   \n",
-       "AAON        building-products-equipment  ...                           NaN   \n",
-       "...                                 ...  ...                           ...   \n",
-       "SEE                packaging-containers  ...                           NaN   \n",
-       "TELNF                  telecom-services  ...                           NaN   \n",
-       "VEVMQ                auto-manufacturers  ...                           NaN   \n",
-       "VICI                   reit-diversified  ...                           NaN   \n",
-       "ZVRA                      biotechnology  ...                           NaN   \n",
+       "     trailingThreeMonthNavReturns netAssets netExpenseRatio newListingDate  \\\n",
+       "A                             NaN       NaN             NaN            NaN   \n",
+       "AAME                          NaN       NaN             NaN            NaN   \n",
+       "AAOI                          NaN       NaN             NaN            NaN   \n",
+       "AAON                          NaN       NaN             NaN            NaN   \n",
+       "AAP                           NaN       NaN             NaN            NaN   \n",
        "\n",
-       "                  198              199             200       201  \\\n",
-       "Unnamed: 0  netAssets  netExpenseRatio  newListingDate  address3   \n",
-       "A                 NaN              NaN             NaN       NaN   \n",
-       "AAME              NaN              NaN             NaN       NaN   \n",
-       "AAOI              NaN              NaN             NaN       NaN   \n",
-       "AAON              NaN              NaN             NaN       NaN   \n",
-       "...               ...              ...             ...       ...   \n",
-       "SEE               NaN              NaN             NaN       NaN   \n",
-       "TELNF             NaN              NaN             NaN       NaN   \n",
-       "VEVMQ             NaN              NaN             NaN       NaN   \n",
-       "VICI              NaN              NaN             NaN       NaN   \n",
-       "ZVRA              NaN              NaN             NaN       NaN   \n",
+       "     address3 morningStarOverallRating morningStarRiskRating  \\\n",
+       "A         NaN                      NaN                   NaN   \n",
+       "AAME      NaN                      NaN                   NaN   \n",
+       "AAOI      NaN                      NaN                   NaN   \n",
+       "AAON      NaN                      NaN                   NaN   \n",
+       "AAP       NaN                      NaN                   NaN   \n",
        "\n",
-       "                                 202                    203  \\\n",
-       "Unnamed: 0  morningStarOverallRating  morningStarRiskRating   \n",
-       "A                                NaN                    NaN   \n",
-       "AAME                             NaN                    NaN   \n",
-       "AAOI                             NaN                    NaN   \n",
-       "AAON                             NaN                    NaN   \n",
-       "...                              ...                    ...   \n",
-       "SEE                              NaN                    NaN   \n",
-       "TELNF                            NaN                    NaN   \n",
-       "VEVMQ                            NaN                    NaN   \n",
-       "VICI                             NaN                    NaN   \n",
-       "ZVRA                             NaN                    NaN   \n",
+       "     annualReportExpenseRatio lastCapGain annualHoldingsTurnover  \n",
+       "A                         NaN         NaN                    NaN  \n",
+       "AAME                      NaN         NaN                    NaN  \n",
+       "AAOI                      NaN         NaN                    NaN  \n",
+       "AAON                      NaN         NaN                    NaN  \n",
+       "AAP                       NaN         NaN                    NaN  \n",
        "\n",
-       "                                 204          205                     206  \n",
-       "Unnamed: 0  annualReportExpenseRatio  lastCapGain  annualHoldingsTurnover  \n",
-       "A                                NaN          NaN                     NaN  \n",
-       "AAME                             NaN          NaN                     NaN  \n",
-       "AAOI                             NaN          NaN                     NaN  \n",
-       "AAON                             NaN          NaN                     NaN  \n",
-       "...                              ...          ...                     ...  \n",
-       "SEE                              NaN          NaN                     NaN  \n",
-       "TELNF                            NaN          NaN                     NaN  \n",
-       "VEVMQ                            NaN          NaN                     NaN  \n",
-       "VICI                             NaN          NaN                     NaN  \n",
-       "ZVRA                             NaN          NaN                     NaN  \n",
-       "\n",
-       "[2347 rows x 207 columns]"
+       "[5 rows x 207 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('company_info_df.csv').T"
+    "company_info_df = pd.read_csv('company_info_df.csv').T\n",
+    "company_info_df = company_info_df.rename(columns=company_info_df.iloc[0]).drop(company_info_df.index[0])\n",
+    "company_info_df.head()"
    ]
   },
   {
